# maelstrom

./: .gitignore  Cargo.toml  Makefile.toml  README.md  bacon.toml  messages.json
.helix/: languages.toml
src/: body.rs  controller.rs  lib.rs  main.rs  message.rs  msg_type.rs  node.rs  payload.rs  use_case.rs
src/application/: echo_use_case.rs  generate_use_case.rs  gossip_use_case.rs  init_use_case.rs  mod.rs  topology_use_case.rs
src/domain/: body.rs  echo.rs  echo_ok.rs  errors.rs  generate.rs  generate_ok.rs  gossip.rs  init.rs  init_ok.rs  message.rs  mod.rs  msg_type.rs  node.rs  topology.rs  topology_ok.rs
src/echo/: body.rs  message.rs  mod.rs  node.rs  payload.rs
src/infrastructure/: controller.rs
src/messages/: broadcast.rs  broadcast_ok.rs  echo.rs  echo_ok.rs  generate.rs  generate_ok.rs  gossip.rs  gossip_ok.rs  init.rs  init_ok.rs  mod.rs  read.rs  read_ok.rs  state.rs  topology.rs  topology_ok.rs
src/model/: body.rs  message.rs  message_type.rs  mod.rs  node.rs
src/use_case/: create_broadcast_ok.rs  create_echo_ok.rs  create_generate_ok.rs  create_gossip_ok.rs  create_init_ok.rs  create_read_ok.rs  create_topology_ok.rs
store/: current  latest
store/echo/: latest
store/echo/20240128T232219.593+0100/: test.jepsen
store/echo/20240128T232252.359+0100/: test.jepsen
store/echo/20240128T232351.317+0100/: test.jepsen
store/echo/20240128T232838.859+0100/: test.jepsen
store/echo/20240128T233013.406+0100/: test.jepsen
store/echo/20240128T233210.519+0100/: test.jepsen
store/unique-ids/: latest
(+113 files in other folders)
